gcc/testsuite/rust/rustc/ui/rustdoc/doc-alias-same-name.rs
#![crate_type = "lib"]

#[doc(alias = "Foo")] // { dg-error "" "" { target *-*-* } }
pub struct Foo;

